--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 SCHEME = "dev"
 # App identifier
-BUNDLE_IDENTIFIER="com.example.presetup.dev"
+BUNDLE_IDENTIFIER="friends.dev"
 
 # Apple team ID
 IOS_TEAM_ID='IOS_TEAM_ID'
