--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,11 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.presetup">
+    package="friends">
 
     <uses-permission android:name="android.permission.INTERNET"/>
-
-    <queries>
-        <provider android:authorities="com.facebook.katana.provider.PlatformProvider" />
-    </queries>
 
    <application
         android:label="@string/app_name"
@@ -52,12 +48,6 @@
             </intent-filter>
         </activity>
 
-        <meta-data
-           android:name="com.facebook.sdk.ApplicationId"
-           android:value="@string/facebook_app_id" />
-       <meta-data
-           android:name="com.facebook.sdk.ClientToken"
-           android:value="@string/facebook_client_token"/>
         <!-- Don't delete the meta-data below.
              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
         <meta-data
