--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: presetup
+name: friends
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
@@ -49,10 +49,10 @@ dependencies:
   firebase_analytics: ^10.1.0
   firebase_auth: ^4.2.5
   flutter_easyloading: ^3.0.5
+  universal_platform: ^1.0.0+1
   google_sign_in: ^6.1.0
   sign_in_with_apple: ^5.0.0
   crypto: ^3.0.2
-  flutter_facebook_auth: ^6.0.0
   google_mobile_ads: ^4.0.0
   flutter_local_notifications: ^16.1.0
   firebase_messaging: ^14.3.0
